[package]
name = "pdb-handler"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Helpful functions to handle PDB files"
keywords = ["pdb", "protein", "bioinformatics", "structure"]
categories = ["science::bioinformatics", "science"]
repository = "https://github.com/rvhonorato/pdb-handler"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
readme = "README.md"


[dependencies]
regex = "1.5"
pdbtbx = "0.12"
serde = { version = "1.0", features = ["derive"] }
