[package]
name = "pdb-handler-wasm"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdb-handler = { path = "../" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
regex = "1.11"
pdbtbx = "0.12"
tsify = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
